# TODO_core

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  dockerfile  entrypoint.sh  entrypoint_localstack.sh  jwt.txt  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
app/core/: jwt_middleware.py  models.py  serializers.py  settings.py  urls.py  views.py
app/core/DataClasses/: UserDataClass.py
app/core/migrations/: 0001_initial.py  0002_remove_task_project_remove_projectmember_project_and_more.py
app/models/task_models/: task_models.py
app/permissions/: IsUserAdminOrOwner.py  permissions_core.py
app/projects/: models.py  permissions.py  permissions_core.py  serializer.py  views.py
app/projects/migrations/: 0001_initial.py
app/projects/models/: __init__.py  project_member_model.py  project_model.py
app/projects/serializators/: serializer.py
app/projects/views/: projects_views.py  views_projects.py
app/tasks/: filter.py  models.py  serializer.py  views.py
app/tasks/migrations/: 0001_initial.py
app/tasks/models/: __init__.py  subscriber_model.py  task_model.py
app/tasks/views/: tasks_views.py  views_tasks.py
application/: jwt_middleware.py  pytest.ini
application/api/tests/: conftest.py
application/api/v1/: urls.py
application/auth/choices/: permission_pool.py
application/auth/jwt_service/: jwt_code.py
application/auth/middleware/: jwt_middleware.py
application/auth/requsts_to_auth/: users_mail.py
application/aws/: ses_manager.py
application/choices/: permission_pool.py
application/core/: __init__.py  celery.py  celery_core.py  settings.py  tasks.py  urls.py
application/projects/celery_tasks/: tasks.py  (+1 more)
(+64 files in other folders)
